--- a/www/css/index.css
+++ b/www/css/index.css
@@ -55,7 +55,175 @@
     animation:fade 3000ms infinite;
     -webkit-animation:fade 3000ms infinite;
 }
-h1 {
-  margin-left: 10%
+body {
+  background: white !important; }
+
+/*# sourceMappingURL=style.css.map */
+.navbar {
+  max-height: 5px !important;
+  background-color: #2E8B57 !important; }
+
+.navbar h3 {
+  color: white; }
+
+.main-heading {
+  margin-top: 0.5%; }
+
+.search-section {
+  margin-top: 5% !important;
+  padding-left: 0px;
+  padding-right: 0px;
+  width: 100%:
+}
+
+.search-button {
+  background-color: #2E8B57 !important;
+  border: none !important;
+  min-width: 100% !important;
+  border-radius: 0px !important;
+  font-size: 30px;
 
 }
+
+.search-button:active {
+  background-color: #3bb16f !important; }
+
+.results-section {
+  background: #2E8B57;
+  min-width: 100% !important;
+  color: white;
+  margin-bottom: 2%; }
+
+.rec-list {
+  padding-left: 0px; }
+
+.rec-list li {
+  display: inline; }
+
+.rec-heading {
+  font-weight: bold; }
+
+.panel-primary .panel-heading {
+  background-color: #2E8B57 !important;
+  margin-top: 5% !important; }
+
+.new-tweet {
+  margin-bottom: 0px !important;
+  background: red; }
+
+.panel-footer {
+  height: 40px; }
+
+.panel-footer p {
+  font-style: italic; }
+
+.tweet-link-div:hover {
+  background-color: #eaf8ff; }
+
+.tweet-text {
+  color: black; }
+
+.tweet-text:hover {
+  text-decoration: none; }
+
+.dbinfo ul {
+  list-style: none; }
+
+.dbinfo ul li {
+  display: inline-block; }
+
+.toTop {
+  display: none;
+  position: fixed;
+  bottom: 120px;
+  right: 30px;
+  z-index: 99;
+  border: none;
+  outline: none;
+  background-color: #2E8B57;
+  color: white;
+  cursor: pointer;
+  padding: 10px;
+  border-radius: 0px; }
+
+.upB {
+  display: none;
+  position: fixed;
+  bottom: 70px;
+  right: 30px;
+  z-index: 99;
+  border: none;
+  outline: none;
+  background-color: #2E8B57;
+  color: white;
+  cursor: pointer;
+  padding: 10px;
+  border-radius: 0px; }
+
+.downB {
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  border: none;
+  outline: none;
+  background-color: #2E8B57;
+  color: white;
+  cursor: pointer;
+  padding: 10px;
+  border-radius: 0px; }
+
+.toTop:hover .downB:hover .upB:hover {
+  background-color: #3bb16f !important; }
+
+.tweetsContainer, .tweetsResult, .tweet-heading, .tweet-box{
+  padding: 0px !important;
+  margin: 0px !important;
+}
+h1, h2 {
+  text-align: center;
+}
+
+.top-section{
+
+}
+
+/*HEADING */
+.tweet-heading {
+  background: #2E8B57;
+  font-size: 30px;
+}
+/* heading text*/
+.tweet-heading a {
+  color: white;
+  padding-left: 5%;
+  padding-right: 5%;
+}
+/* text */
+.tweet-link-div{
+  padding: 5%;
+  font-size: 20px;
+}
+
+/*footer*/
+.tweet-footer{
+  font-style: italic;
+  background: #e0e0e0;
+  padding-left: 5%;
+  padding-right: 5%;
+  margin-bottom: 7%;
+}
+
+.page-header {
+  padding-top: 1% !important;
+  padding-bottom: 1% !important;
+  width: 100%;
+  background: #2E8B57;
+  color: white;
+}
+
+.form-control {
+
+}
+
+/*# sourceMappingURL=style.css.map */
