--- a/platforms/ios/www/css/index.css
+++ b/platforms/ios/www/css/index.css
@@ -58,16 +58,6 @@
 body {
   background: white !important; }
 
-/*# sourceMappingURL=style.css.map */
-.navbar {
-  max-height: 5px !important;
-  background-color: #2E8B57 !important; }
-
-.navbar h3 {
-  color: white; }
-
-.main-heading {
-  margin-top: 0.5%; }
 
 .search-section {
   margin-top: 0% !important;
@@ -87,19 +77,6 @@ body {
 
 .search-button:active {
   background-color: #3bb16f !important; }
-
-.results-section {
-  background: #2E8B57;
-  min-width: 100% !important;
-  color: white;
-  margin-bottom: 2%; }
-
-.rec-list {
-  padding-left: 0px; }
-
-.rec-list li {
-  display: inline; }
-
 
 h1 {
   margin-top: 0%;
@@ -175,8 +152,8 @@ h1, h2 {
   margin-bottom: 0px !important;
 }
 
-.form-control {
-
+.db-heading {
+  text-align: left;
 }
 
 /*# sourceMappingURL=style.css.map */
