--- a/platforms/ios/www/css/index.css
+++ b/platforms/ios/www/css/index.css
@@ -78,6 +78,16 @@ body {
 .search-button:active {
   background-color: #3bb16f !important; }
 
+/* unvisited link */
+a:link {
+  text-decoration: none !important;
+}
+
+/* visited link */
+a:visited {
+  text-decoration: none !important;
+}
+
 h1 {
   margin-top: 0%;
   padding-top: 5%;
