--- a/platforms/android/res/xml/config.xml
+++ b/platforms/android/res/xml/config.xml
@@ -23,5 +23,11 @@
     <allow-intent href="mailto:*" />
     <allow-intent href="geo:*" />
     <allow-intent href="market:*" />
+    <icon qualifier="ldpi" src="res/icons/android/icon-36-ldpi.png" />
+    <icon qualifier="mdpi" src="res/icons/android/icon-48-mdpi.png" />
+    <icon qualifier="hdpi" src="res/icons/android/icon-72-hdpi.png" />
+    <icon qualifier="xhdpi" src="res/icons/android/icon-96-xhdpi.png" />
+    <icon qualifier="xxhdpi" src="res/icons/android/icon-144-xxhdpi.png" />
+    <icon qualifier="xxxhdpi" src="res/icons/android/icon-192-xxxhdpi.png" />
     <preference name="loglevel" value="DEBUG" />
 </widget>
