--- a/platforms/ios/www/css/index.css
+++ b/platforms/ios/www/css/index.css
@@ -16,6 +16,9 @@
  * specific language governing permissions and limitations
  * under the License.
  */
+
+ /* @author Thanh Trung, Omorhefere Imoloame and Mahesha Kulatunga  @version 1.0.0*/
+ /* CSS for mobile app front end*/
 * {
     -webkit-tap-highlight-color: rgba(0,0,0,0); /* make transparent link selection, adjust last value opacity 0 to 1.0 */
 }
